add language and quote transliteration on quote table
