# backend/internal/domain/requests/quote/create.go
@@ -3,8 +3,10 @@ package quote
 import "github.com/go-playground/validator/v10"
 
 type CreateQuoteRequest struct {
-	QuoteText string `json:"quote_text" validate:"required"`
-	MovieID   int    `json:"movie_id" validate:"required"`
+	QuoteText            string `json:"quote_text" validate:"required"`
+	QuoteTransliteration string `json:"quote_transliteration"`
+	MovieID              int    `json:"movie_id" validate:"required"`
+	LanguageID           int    `json:"language_id" validate:"required"`
 }
 
 func (c *CreateQuoteRequest) Validate() error {
